Record launch time for Chrome app

Without this Chrome is pushed out of the list of suggested apps
very soon after the profile creation and never comes back even
after it is launched.

Bug: 894898
Test: manual
Change-Id: I7d12958c1522336bf831d31b9288a6084cc5f974
Reviewed-on: https://chromium-review.googlesource.com/c/1338472
Commit-Queue: Vladislav Kaznacheev <kaznacheev@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Yury Khmel <khmel@chromium.org>
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612868}
Former-commit-id: c1835110652edd4411000a6cadb3bb580449c410